--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
   <title>First file</title>
-  <link rel="stylesheet"href="/Users/marinapritula/Documents/FE/css.html">
+  <link rel="stylesheet"href="/Users/marinapritula/git/prytula_html_1-/style.css">
 </head>
 <body>
 <div class="wrapper">
